position relative, absolute, tommorow end

--- a/index.html
+++ b/index.html
@@ -515,5 +515,19 @@
         </div> 
       </div>-->
     </div>
+
+    <div class="close-button">X</div>
+    <div class="rectangle">
+      <div class="close-button2">X</div>
+      <div class="time">0:29</div>
+    </div>
+
+    <div class="shopping">
+      <img class="shoe-photo" src="img/mustang.jpg"/>
+      <div class="discount">20% OFF</div>
+      <div class="button-container">
+        <button class="add-to-cart">Add to Cart</button>
+      </div>
+    </div>
   </body>
 </html>
