--- a/youtube.html
+++ b/youtube.html
@@ -14,27 +14,32 @@
   </head>
   <body>
     <div class="header">
-      <div class="left-section"> 
-        <img class="hamburger-menu" src="icons/hamburger-menu.svg"/>
-        <img class="yt-logo" src="icons/youtube-logo.svg"/>
+      <div class="left-section">
+        <img class="hamburger-menu" src="icons/hamburger-menu.svg" />
+        <img class="yt-logo" src="icons/youtube-logo.svg" />
       </div>
       <div class="middle-section">
         <input class="search-bar" type="text" placeholder="Search" />
-        <button class="search-button"><img class="search-icon" src="icons/search.svg" /></button>
-        <button class="voice-search-button"><img class="voice-search-icon" src="icons/voice-search-icon.svg" /></button>
+        <button class="search-button">
+          <img class="search-icon" src="icons/search.svg" />
+        </button>
+        <button class="voice-search-button">
+          <img class="voice-search-icon" src="icons/voice-search-icon.svg" />
+        </button>
       </div>
       <div class="right-section">
-        <img class="upload" src="icons/upload.svg"/>
-        <img class="yt-apps" src="icons/youtube-apps.svg"/>
-        <img class="notifications" src="icons/notifications.svg"/>
-        <img class="my-channel-photo" src="icons/my-channel.jpeg"/>
+        <img class="upload" src="icons/upload.svg" />
+        <img class="yt-apps" src="icons/youtube-apps.svg" />
+        <div class="notifi-container">
+          <img class="notifications" src="icons/notifications.svg" />
+          <div class="notifi-counter">3</div>
+        </div>
+
+        <img class="my-channel-photo" src="icons/my-channel.jpeg" />
       </div>
     </div>
 
-    <div class="sidebar">
-      sidebar
-    </div>
-    
+    <div class="sidebar">sidebar</div>
 
     <div class="video-grid">
       <div class="video-preview">
@@ -44,6 +49,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -67,6 +73,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">6:23</div>
         </div>
 
         <div class="video-info-grid">
@@ -88,6 +95,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -111,6 +119,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -132,6 +141,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -155,6 +165,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -166,7 +177,7 @@
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
-        </div>        
+        </div>
       </div>
 
       <div class="video-preview">
@@ -176,6 +187,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -199,6 +211,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -210,7 +223,7 @@
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
-        </div>        
+        </div>
       </div>
 
       <div class="video-preview">
@@ -220,6 +233,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -243,6 +257,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -254,7 +269,7 @@
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
-        </div>        
+        </div>
       </div>
 
       <div class="video-preview">
@@ -264,6 +279,7 @@
             src="img/thumbnail-1.webp"
             alt="Zdjęcie osoby x i y"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -287,6 +303,7 @@
             src="img/thumbnail-2.webp"
             alt="Zdjęcie osoby smiejącej się"
           />
+          <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
@@ -298,9 +315,8 @@
             <p class="video-author">Markiplier</p>
             <p class="video-stats">19M views &#183; 4 years ago</p>
           </div>
-        </div>        
+        </div>
       </div>
-
     </div>
   </body>
 </html>
