--- a/youtube.html
+++ b/youtube.html
@@ -22,39 +22,87 @@
         <input class="search-bar" type="text" placeholder="Search" />
         <button class="search-button">
           <img class="search-icon" src="icons/search.svg" />
+          <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
           <img class="voice-search-icon" src="icons/voice-search-icon.svg" />
+          <div class="tooltip">Search with your voice</div>
         </button>
       </div>
       <div class="right-section">
-        <img class="upload" src="icons/upload.svg" />
-        <img class="yt-apps" src="icons/youtube-apps.svg" />
+        <div class="upload-icon-container">
+          <img class="upload" src="icons/upload.svg" />
+          <div class="tooltip">Create</div>
+        </div>
+
+        <div class="yt-apps-icon-container">
+          <img class="yt-apps" src="icons/youtube-apps.svg" />
+          <div class="tooltip">YouTube Apps</div>
+        </div>
         <div class="notifi-container">
           <img class="notifications" src="icons/notifications.svg" />
           <div class="notifi-counter">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
 
-        <img class="my-channel-photo" src="icons/my-channel.jpeg" />
+        <div class="my-channel-container">
+          <img class="my-channel-photo" src="icons/my-channel.jpeg" />
+          <div class="tooltip">My channel</div>
+        </div>
       </div>
     </div>
 
-    <div class="sidebar">sidebar</div>
+    <div class="sidebar">
+      <div class="sidebar-link">
+        <img src="icons/home.svg" />
+        <div>Home</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="icons/explore.svg" />
+        <div>Explore</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="icons/subscriptions.svg" />
+        <div>Subscriptions</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="icons/originals.svg" />
+        <div>Originals</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="icons/youtube-music.svg" />
+        <div>YouTube Music</div>
+      </div>
+      <div class="sidebar-link">
+        <img src="icons/library.svg" />
+        <div>Library</div>
+      </div>
+    </div>
 
     <div class="video-grid">
       <div class="video-preview">
         <div class="thumbnail-row">
-          <img
-            class="thumbnail"
-            src="img/thumbnail-1.webp"
-            alt="Zdjęcie osoby x i y"
-          />
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY"
+            ><img
+              class="thumbnail"
+              src="img/thumbnail-1.webp"
+              alt="Zdjęcie osoby x i y"
+          /></a>
           <div class="video-time">14:20</div>
         </div>
 
         <div class="video-info-grid">
           <div class="channel-photo">
             <img class="profile-photo" src="img/channel-1.jpeg" />
+            <div class="profile-tooltips">
+              <div class="profile-picture">
+                <img class="avatar" src="img/channel-1.jpeg" />
+              </div>
+              <div class="profile-info">
+                <p class="name">Marques Brownlee</p>
+                <p class="subscribers">15M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">
@@ -79,6 +127,15 @@
         <div class="video-info-grid">
           <div class="channel-photo">
             <img class="profile-photo" src="img/channel-2.jpeg" />
+            <div class="profile-tooltips">
+              <div class="profile-picture">
+                <img class="avatar" src="img/channel-2.jpeg" />
+              </div>
+              <div class="profile-info">
+                <p class="name">Markipiler</p>
+                <p class="subscribers">5M subscribers</p>
+              </div>
+            </div>
           </div>
           <div class="video-info">
             <p class="video-title">Try Not To Laugh Challenge #9</p>
